--- a/index.html
+++ b/index.html
@@ -250,15 +250,14 @@
                 <div class="experiance">
                     <h3 class="work-title">工作经历</h3>
                     <p style="font-size:25px">宁波钟意饰品有限公司</p>
-                    <p>国际站运营</p>
+                    <p>网站开发</p>
                     <p>2015年1月 - 2016年12月</p>
                     <p>帮助公司建立了自己的网站</p>
-                    <p>虽然是运营岗位，但是由此接触到了网站相关知识，打开了 web 大门</p>
 
                     <p style="font-size:25px;margin-top:30px;">宁波小薇云集有限公司</p>
-                    <p>亚马逊运营，爬虫工程师</p>
+                    <p>爬虫开发</p>
                     <p>2017年1月 - 2017年10月</p>
-                    <p>写了一个亚马逊爬虫，爬取页面标题价格等信息</p>
+                    <p>负责 Amazon 页面信息爬取和页面内容的提取分析</p>
                 </div>
             </div>
             <div class="section section6">
